add flexs and optimization images

--- a/index.html
+++ b/index.html
@@ -10,104 +10,131 @@
 
 <body>
 
+  <!-- Header -->
   <header>
     <div class="container">
-      <nav>
-        <a href="/">
-          <img src="images/logo.svg" alt="Логотип">
-        </a>
-        <ul class="menu__list">
-          <li>
-            <a class="menu__list-link" href="#about">Про нас</a>
-          </li>
-          <li>
-            <a class="menu__list-link" href="#whywe">Чому ми</a>
-          </li>
-          <li>
-            <a class="menu__list-link" href="#procedures">Наші процедури</a>
-          </li>
-          <li>
-            <a class="menu__list-link" href="#contacts">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <a href="#" target="_blank">
-        <img src="images/phone-icon.svg" alt="Телефон">
-      </a>
-      <a href="#" target="_blank">
-        <img src="images/facebook-icon.svg" alt="Фейсбук">
-      </a>
-      <a href="#" target="_blank">
-        <img src="images/instagram-icon.svg" alt="Інстаграм">
-      </a>
+
+      <div class="header__container">
+        <nav class="header__nav">
+          <a class="header__logo" href="/">
+            <img src="images/logo.svg" width="74" height="42" alt="Логотип">
+          </a>
+          <ul class="menu__list">
+            <li>
+              <a class="menu__list-link" href="#about">Про нас</a>
+            </li>
+            <li>
+              <a class="menu__list-link" href="#whywe">Чому ми</a>
+            </li>
+            <li>
+              <a class="menu__list-link" href="#procedures">Наші процедури</a>
+            </li>
+            <li>
+              <a class="menu__list-link" href="#contacts">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__social">
+          <a class="header__social-link" href="#" target="_blank">
+            <svg width="32" height="32">
+              <use href="images/icons.svg#icon-phone"></use>
+            </svg>
+          </a>
+          <a class="header__social-link" href="#" target="_blank">
+            <svg width="32" height="32">
+              <use href="images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+          <a class="header__social-link" href="#" target="_blank">
+            <svg width="32" height="32">
+              <use href="images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
+
     </div>
   </header>
 
   <main>
     <section class="hero">
       <div class="container">
-        <p class="hero__text">
-          Косметологічна клініка
-        </p>
-        <h1 class="hero__title title">
-          Beauty Zone
-        </h1>
-        <button class="button" type="button">
-          Замовити дзвінок
-        </button>
-        <p class="hero__desc">
-          Запишись та отримай безкоштовну консультацію нашого косметолога
-        </p>
+        <div class="hero__container">
+          <div class="hero__content">
+            <p class="hero__text">
+              Косметологічна клініка
+            </p>
+            <h1 class="hero__title title">
+              Beauty Zone
+            </h1>
+            <button class="button" type="button">
+              Замовити дзвінок
+            </button>
+            <p class="hero__desc">
+              Запишись та отримай безкоштовну консультацію нашого косметолога
+            </p>
+          </div>
+        </div>
 
-        <img src="images/hero-bg.png" alt="Масаж обличчя">
       </div>
     </section>
 
-
+    <!-- About -->
     <section id="about">
       <div class="container">
-        <h2 class="about__title title">
-          Перевтілюйтесь в <span class="accent">beauty zone!</span>
-        </h2>
-        <div class="about__text">
-          <p class="about__text-desc">
-            Наша косметологічна клініка пропонує вам професійні послуги
-            з догляду за шкірою обличчя та тіла.
-          </p>
-          <p class="about__text-desc">
-            B beauty zone ми гарантуємо найвищі стандарти якості
-            та приємний сервіс. Наші косметологічні процедури та препарати допоможуть вам підтримувати свою красу та
-            молодість.
-            З нами краса назавжди!
-          </p>
+        <div class="about__container">
+          <div class="about__content">
+            <h2 class="about__title title">
+              Перевтілюйтесь в <span class="accent">Beauty Zone!</span>
+            </h2>
+            <p class="about__text-desc">
+              Наша косметологічна клініка пропонує вам професійні послуги
+              <br> з догляду за шкірою обличчя та тіла.
+            </p>
+            <p class="about__text-desc">
+              B beauty zone ми гарантуємо найвищі стандарти якості <br>
+              та приємний сервіс. Наші косметологічні процедури та препарати <br> допоможуть вам підтримувати свою красу
+              та молодість. <br>
+              З нами краса назавжди!
+            </p>
+          </div>
+          <div class="about__images">
+            <img class="about__img" src="images/face-before.jpg" alt="Фото обличчя до">
+            <img class="about__img" src="images/face-after.jpg" alt="Фото обличчя після">
+          </div>
         </div>
-        <img src="images/face-before.jpg" alt="Фото обличчя до">
-        <img src="images/face-after.jpg" alt="Фото обличчя після">
+
       </div>
     </section>
 
-
+    <!-- Why We -->
     <section class="whywe section" id="whywe">
       <div class="container">
-        <h2 class="title">
-          Чому люди обирають нас
+        <h2 class="whywe__title title__center title">
+          Чому люди <span class="accent">обирають нас</span>
         </h2>
         <ul class="whywe__items">
-          <li>
-            <img src="images/whywe-img1.svg" alt="">
+          <li class="whywe__item">
+            <svg class="whywe__icon" width="48" height="48">
+              <use href="images/icons.svg#whywe-icon1"></use>
+            </svg>
             <p class="whywe__item-text">
-              Всі наші косметологи мають вищу медичну освіту
+              Всі наші косметологи мають вищу медичну освіту <br>
               та стаж роботи від 5 років
             </p>
           </li>
-          <li>
-            <img src="images/whywe-img2.svg" alt="">
+          <li class="whywe__item">
+            <svg class="whywe__icon" width="48" height="48">
+              <use href="images/icons.svg#whywe-icon2"></use>
+            </svg>
             <p class="whywe__item-text">
               Використовуємо тільки професійне обладнання та косметику, перевірену часом
             </p>
           </li>
-          <li>
-            <img src="images/whywe-img3.svg" alt="">
+          <li class="whywe__item">
+            <svg class="whywe__icon" width="48" height="48">
+              <use href="images/icons.svg#whywe-icon3"></use>
+            </svg>
             <p class="whywe__item-text">
               Наша мета - підкреслити переваги та приховати недоліки, а не переробити
             </p>
@@ -116,42 +143,54 @@
       </div>
     </section>
 
-
+    <!-- Procedures -->
     <section class="procedures section" id="procedures">
       <div class="container">
-        <h2 class="title">
+        <h2 class="title__center title">
           Наші <span class="accent">процедури</span>
         </h2>
-        <ul class="procedures__items">
-          <li>
-            <img src="images/procedures-img1.png" alt="Мазання маски на обличчя">
-            <p class="procedures__item-text">
-              Маски для обличчя
-            </p>
-          </li>
-          <li>
-            <img src="images/procedures-img2.png" alt="Інєкція в обличчя">
-            <p class="procedures__item-text">
-              Ін'єкції для обличчя
-            </p>
-          </li>
-          <li>
-            <img src="images/procedures-img3.png" alt="Чистка обличчя">
-            <p class="procedures__item-text">
-              Очищення обличчя
-            </p>
-          </li>
-        </ul>
+        <div class="procedures__container">
+          <button class="carousel-button">
+            <svg width="17" height="17">
+              <use href="images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
+          <ul class="procedures__items">
+            <li class="procedures__item">
+              <img src="images/procedures-img1.png" alt="">
+              <p class="procedures__item-text">
+                Маски <br> для обличчя
+              </p>
+            </li>
+            <li class="procedures__item">
+              <img src="images/procedures-img2.png" alt="">
+              <p class="procedures__item-text">
+                Ін'єкції для обличчя
+              </p>
+            </li>
+            <li class="procedures__item">
+              <img src="images/procedures-img3.png" alt="">
+              <p class="procedures__item-text">
+                Очищення обличчя
+              </p>
+            </li>
+          </ul>
+          <button class="carousel-button">
+            <svg width="17">
+              <use href="images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </section>
 
-
+    <!-- Contacts -->
     <section class="contacts section" id="contacts">
       <div class="container">
-        <h2 class="title">
+        <h2 class="title__center title">
           Як нас <span class="accent">знайти</span>
         </h2>
-        <iframe
+        <iframe class="map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9323939867572!2d30.513304389479654!3d50.44235991470448!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2sTarasa%20Shevchenko%20Blvd%2C%205%2C%20Kyiv%2C%20Ukraine%2C%2002000!5e0!3m2!1sen!2sbe!4v1710077243271!5m2!1sen!2sbe"
           width="605" height="481" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -172,65 +211,85 @@
     </section>
   </main>
 
-
+  <!-- Footer -->
   <footer class="footer">
     <div class="container">
-      <nav>
-        <a href="/">
-          <img src="images/logo.svg" alt="Логотип">
-        </a>
-        <ul class="footer__menu">
-          <li>
-            <a class="footer__menu-link" href="#about">Про нас</a>
-          </li>
-          <li>
-            <a class="footer__menu-link" href="#whywe">Чому ми</a>
-          </li>
-          <li>
-            <a class="footer__menu-link" href="#procedures">Наші процедури</a>
-          </li>
-          <li>
-            <a class="footer__menu-link" href="#contacts">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a class="adress__link" href="tel:+380960000007">+ 38 (096) 000 00 07</a>
-          </li>
-          <li>
-            <a class="adress__link" href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a>
-          </li>
-          <li>
-            <a class="adress__link" href="https://maps.app.goo.gl/udv68qvUV772tDpG8" target="_blank">
-              Україна, м. Київ, вул. Тараса Шевченка 5
+      <div class="footer__container">
+        <nav class="footer__nav">
+          <div class="footer__logo">
+            <a class="footer__logo-link" href="/">
+              <img src="images/logo.svg" width="74" height="42" alt="Логотип">
             </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/" alt="">
+          </div>
+          <ul class="footer__menu">
+            <li>
+              <a class="footer__menu-link" href="#about">Про нас</a>
+            </li>
+            <li>
+              <a class="footer__menu-link" href="#whywe">Чому ми</a>
+            </li>
+            <li>
+              <a class="footer__menu-link" href="#procedures">Наші процедури</a>
+            </li>
+            <li>
+              <a class="footer__menu-link" href="#contacts">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="footer__address">
+          <ul class="address__info">
+            <li>
+              <a class="address__link" href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+            </li>
+            <li>
+              <a class="address__link" href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a>
+            </li>
+            <li>
+              <a class="address__link" href="https://maps.app.goo.gl/udv68qvUV772tDpG8" target="_blank">
+                Україна, м. Київ, вул. Тараса Шевченка 5
+              </a>
+            </li>
+
+            <ul class="address__social">
+              <li>
+                <a href="#" target="_blank">
+                  <svg class="address__social-icon" width="42" height="42">
+                    <use href="images/icons.svg#icon-phone"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" target="_blank">
+                  <svg class="address__social-icon" width="42" height="42">
+                    <use href="images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" target="_blank">
+                  <svg class="address__social-icon" width="42" height="42">
+                    <use href="images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </ul>
+
+
+
+          <div class="address__copy">
+            <a class="address__link" href="#" target="_blank">
+              Політика конфіденційності
             </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/" alt="">
-            </a>
-          </li>
-        </ul>
-        <a class="adress__link" href="#" target="_blank">
-          Політика конфіденційності
-        </a>
-        <p class="adress__copyright">
-          &copy; 2022 Дані захищені
-        </p>
-      </address>
-      <img src="images/footer-img.png" alt="Препарати">
+            <p class="address__copyright">
+              &copy; 2022 Дані захищені
+            </p>
+          </div>
+
+        </address>
+      </div>
+
+      <!-- <img src="images/footer-img.png" alt="Препарати"> -->
     </div>
   </footer>
 
